# rest-api-project

./: .env  .gitignore  Dockerfile  Insomnia_endpoints.json  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  schemas.py
instance/: data.db
migrations/versions/: 04e4546a2159_.py  d10a2ce0adeb_.py
models/: __init__.py  blocklist.py  item.py  store.py  tags.py
resources/: item.py  store.py  tag.py  user.py
