[tool.poetry]
name = "REST API project"
version = "0.1.0"
description = ""
authors = ["Emiliano Frigo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = ">=1.0.1"
pylint = "^2.17.4"
flask = ">=2.0.1"
flask-smorest = ">=0.45.0"
pydantic = "^1.10.5"
flasgger = "^0.9.7.1"
sqlalchemy = ">=2.0.36"
flask-sqlalchemy = ">=3.1.1"
flask-jwt-extended = ">=4.7.1"
passlib = ">=1.7.4"
